[package]
edition = "2021"
name = "hinpan"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
dos-errno-and-panic = { path = "../.." }
exit-no-std = "0.1.4"
pc-atomics = "0.0.1"
rlibc = "1.0.0"
